Add a vspace after the title
This allow to reduce the space between the top of the page and the name

--- a/moderncvheadi.sty
+++ b/moderncvheadi.sty
@@ -113,6 +113,7 @@
       \if@right\raggedleft\fi%
       \namestyle{\@firstname\ \@lastname}%
       \ifthenelse{\equal{\@title}{}}{}{\\[1.25em]\titlestyle{\@title}}%
+      \vspace{20pt}
     \end{minipage}}%
   % rendering
   \if@left%
